# totp-win-app

./: .gitignore  Cargo.toml  README.md  build.rs  secrets.txt.example
.cargo/: config.toml
.github/workflows/: release.yml
specs/totp-app/: spec.md
src/: clipboard.rs  file.rs  main.rs  totp.rs  ui.rs
